@startuml
skinparam dpi 160
skinparam shadowing false
skinparam classAttributeIconSize 0
title 用户与权限当前设计类图

class User {
  id
  username
  passwordHash
  displayName
  role
  language
  status
}
class Role {
  id
  name
  description
}
class Permission {
  id
  name
  module
}
class RolePermission {
  id
  roleId
  permissionId
}
class AuthService {
  + login(username,password)
  + issueToken(user)
  + verifyToken(token)
}
class RuntimeStore {
  + addUser()
  + updateUser()
  + listRoles()
  + setRolePermissions()
}

Role "1" -- "*" RolePermission
Permission "1" -- "*" RolePermission
User ..> Role : role 字段关联
AuthService ..> User
RuntimeStore ..> User
RuntimeStore ..> Role
RuntimeStore ..> Permission
@enduml
